# FDM_Poisson

./: PoissonFDM.cabal  README.md  plot3d.py  report.cabal  stack.yaml
src/: Main.hs  PoissonFDM.hs
