name:                report
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable report
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       PoissonFDM
  ghc-options:         -O3 -Wall -rtsopts -pgmc gcc
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sized-types
                     , singletons
                     , vector-space

                     , lens
                     , colour
                     , data-default
                     , Chart
                     , Chart-cairo
                     , process

